--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,16 @@
             <!--<artifactId>jstl</artifactId>-->
             <!--<version>1.2</version>-->
         <!--</dependency>-->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
